
* [breaking] you probably need to change your code
* [minor breaking] you likely don't need to change your code

== Unreleased

* https://github.com/clj-commons/etaoin/pull/552[#552]: Add support for wide characters to input fill functions
(https://github.com/tupini07[@tupini07])
* https://github.com/clj-commons/etaoin/issues/566[#566]: Recognize `:driver-log-level` for Edge
* bump all deps to current versions
* tests
** https://github.com/clj-commons/etaoin/issues/572[#572]: stop using chrome `--no-sandbox` option, it has become problematic on Windows (and we did not need it anyway)
* docs
** https://github.com/clj-commons/etaoin/issues/534[#534]: better describe `etaoin.api/select` and its alternatives
** https://github.com/clj-commons/etaoin/issues/536[#536]: user guide examples are now all os agnostic and CI tested via test-doc-blocks on all supported OSes
* https://github.com/clj-commons/etaoin/issues/602[#602]: Document all :fn/* query pseudo-functions in a definitive list

== v1.0.40

* https://github.com/clj-commons/etaoin/issues/524[#524]: fix failure in bb related to `Thread/sleep` interop in JDK19

https://github.com/clj-commons/etaoin/compare/v1.0.39\...v1.0.40[Full commit log]

== v1.0.39

* https://github.com/clj-commons/etaoin/issues/503[#503]: Address Clojure interop issue introduced by new Thread/sleep signature in JDK 19
* https://github.com/clj-commons/etaoin/issues/513[#513]: Fix rendering of exception when used from REPL
* bumped Etaoin dependencies
* docs:
** https://github.com/clj-commons/etaoin/issues/447[#447]: Describe testing without a display in the link:doc/01-user-guide.adoc#headless-testing[user guide], including a new requirement for a windows manager when using a virtual display on Linux